--- a/app/src/main/res/drawable/coni.xml
+++ b/app/src/main/res/drawable/coni.xml
@@ -9,7 +9,7 @@
                     <gradient android:angle="270"
                         android:endColor="#253f71" android:startColor="#ff1655a0" />
                     <stroke android:width="1dp" android:color="#ffe2e2e2" />
-                    <corners android:topRightRadius="10dp" android:topLeftRadius="10dp" />
+                    <corners android:radius="10dp" />
 
                 </shape>
             </item>
