--- a/app/src/main/res/layout-large/game.xml
+++ b/app/src/main/res/layout-large/game.xml
@@ -7,35 +7,78 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="30dp">
+        android:layout_height="50dp">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="100 gold"
-            android:id="@+id/textViewGold"
-            android:layout_alignParentBottom="true"
+        <RelativeLayout
+            android:layout_width="150dp"
+            android:layout_height="40dp"
+            android:background="@drawable/coni"
+            android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:textSize="25dp"
-            android:textColor="#151554"/>
+            android:layout_marginRight="5dp">
 
-        <ImageButton
-            android:layout_width="50dp"
-            android:layout_height="25dp"
-            android:id="@+id/imageButton3"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="20dp"
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="100"
+                android:alpha="0.7"
+                android:id="@+id/textViewGold"
+                android:layout_centerVertical="true"
+                android:textSize="28sp"
+                android:layout_marginRight="5dp"
+                android:textColor="#ffffffff"
+                android:layout_toLeftOf="@+id/imageView"/>
 
-            android:background="#ffff0a11"/>
+            <ImageView
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:background="@drawable/coin"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:id="@+id/imageView"
+                android:layout_marginRight="5dp"/>
 
-        <TextView
-            android:layout_width="wrap_content"
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="70dp"
             android:layout_height="wrap_content"
-            android:text="0"
-            android:id="@+id/textViewCurLevel"
             android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true" />
+            android:background="@drawable/coni"
+            android:layout_marginLeft="5dp">
+
+            <ImageButton
+                android:layout_width="45dp"
+                android:layout_height="40dp"
+                android:id="@+id/imageButton3"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="10dp"
+                android:alpha="0.7"
+                android:background="@drawable/arr"/>
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="85dp"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/coni"
+            android:id="@+id/cifra">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="0"
+                android:layout_centerHorizontal="true"
+                android:textColor="#ffffffff"
+                android:textSize="40sp"
+                android:id="@+id/textViewCurLevel"
+                android:alpha="0.7"/>
+
+        </RelativeLayout>
+
+
 
         <Button
             style="?android:attr/buttonStyleSmall"
@@ -44,7 +87,7 @@
             android:text="+"
             android:id="@+id/nextLevel"
             android:layout_alignParentTop="true"
-            android:layout_toRightOf="@+id/textViewCurLevel"
+            android:layout_toRightOf="@+id/cifra"
             android:onClick="NextLevelClick"/>
 
         <Button
@@ -54,9 +97,10 @@
             android:text="-"
             android:id="@+id/prevLevel"
             android:layout_centerVertical="true"
-            android:layout_toLeftOf="@+id/textViewCurLevel"
-            android:layout_toStartOf="@+id/textViewCurLevel"
+            android:layout_toLeftOf="@+id/cifra"
             android:onClick="PrevLevelClick"/>
+
+
     </RelativeLayout>
 
     <RelativeLayout android:id="@+id/container" android:layout_width="match_parent" android:layout_height="550dp">
@@ -67,11 +111,11 @@
                          the ZoomActivity class.
             -->
             <RelativeLayout android:layout_width="530dp" android:layout_height="530dp" android:layout_centerHorizontal="true">
-                <ImageButton android:layout_width="260dp" android:layout_height="260dp" android:layout_x="0dp" android:layout_y="0dp" android:background="#ff000000" android:layout_marginBottom="5dp" android:id="@+id/imageView1" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:layout_alignParentTop="true" android:layout_alignParentLeft="true" android:padding="3dp"/>
-                <ImageButton android:layout_width="260dp" android:layout_height="260dp" android:layout_x="170dp" android:background="#ff000000" android:adjustViewBounds="false" android:baselineAlignBottom="false" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" android:layout_marginLeft="5dp" android:id="@+id/imageView2" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:padding="3dp"/>
-                <ImageButton android:layout_width="260dp" android:layout_height="260dp" android:layout_x="0dp" android:layout_y="170dp" android:background="#ff000000" android:clickable="false" android:layout_alignParentBottom="true" android:layout_alignParentLeft="true" android:layout_alignParentStart="true" android:id="@+id/imageView3" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:padding="3dp"/>
-                <ImageButton android:layout_width="260dp" android:layout_height="260dp" android:layout_x="170dp" android:layout_y="170dp" android:background="#ff000000" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:layout_marginLeft="5dp" android:layout_marginBottom="5dp" android:id="@+id/imageView4" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:padding="3dp"/>
-                <ImageView android:id="@+id/expanded_image" android:layout_width="530dp" android:layout_height="530dp" android:visibility="invisible" android:contentDescription="@string/description_zoom_touch_close" android:layout_centerInParent="true" android:layout_x="0dp" android:layout_y="0dp" android:padding="3dp" android:background="#ff10ff12"/>
+                <ImageButton android:layout_width="260dp" android:layout_height="260dp" android:layout_x="0dp" android:layout_y="0dp" android:background="#ff20195d" android:layout_marginBottom="5dp" android:id="@+id/imageView1" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:layout_alignParentTop="true" android:layout_alignParentLeft="true" android:padding="3dp"/>
+                <ImageButton android:layout_width="260dp" android:layout_height="260dp" android:layout_x="170dp" android:background="#ff20195d" android:adjustViewBounds="false" android:baselineAlignBottom="false" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" android:layout_marginLeft="5dp" android:id="@+id/imageView2" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:padding="3dp"/>
+                <ImageButton android:layout_width="260dp" android:layout_height="260dp" android:layout_x="0dp" android:layout_y="170dp" android:background="#ff20195d" android:clickable="false" android:layout_alignParentBottom="true" android:layout_alignParentLeft="true" android:layout_alignParentStart="true" android:id="@+id/imageView3" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:padding="3dp"/>
+                <ImageButton android:layout_width="260dp" android:layout_height="260dp" android:layout_x="170dp" android:layout_y="170dp" android:background="#ff20195d" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:layout_marginLeft="5dp" android:layout_marginBottom="5dp" android:id="@+id/imageView4" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:padding="3dp"/>
+                <ImageView android:id="@+id/expanded_image" android:layout_width="530dp" android:layout_height="530dp" android:visibility="invisible" android:contentDescription="@string/description_zoom_touch_close" android:layout_centerInParent="true" android:layout_x="0dp" android:layout_y="0dp" android:padding="4dp" android:background="#ff20195d"/>
             </RelativeLayout>
         </RelativeLayout>
     </RelativeLayout>
@@ -102,15 +146,15 @@
             android:layout_marginLeft="5dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:background="#fffcda1a"
+            android:background="#A4FF8144"
             android:onClick="onClickActualLetter"/>
 
         <Button
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:id="@+id/buttonLetter1"
-            android:background="#fffcda1a"
-            android:layout_marginLeft="5dp"
+            android:background="#A4FF8144"
+            android:layout_marginLeft="10dp"
             android:layout_toRightOf="@+id/buttonLetter0"
             android:layout_toEndOf="@+id/buttonLetter0"
             android:onClick="onClickActualLetter" />
@@ -119,8 +163,8 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:id="@+id/buttonLetter2"
-            android:background="#fffcda1a"
-            android:layout_marginLeft="5dp"
+            android:background="#A4FF8144"
+            android:layout_marginLeft="10dp"
             android:layout_toRightOf="@+id/buttonLetter1"
             android:layout_toEndOf="@+id/buttonLetter1"
             android:onClick="onClickActualLetter" />
@@ -129,8 +173,8 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:id="@+id/buttonLetter3"
-            android:background="#fffcda1a"
-            android:layout_marginLeft="5dp"
+            android:background="#A4FF8144"
+            android:layout_marginLeft="10dp"
             android:layout_toRightOf="@+id/buttonLetter2"
             android:layout_toEndOf="@+id/buttonLetter2"
             android:onClick="onClickActualLetter" />
@@ -139,8 +183,8 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:id="@+id/buttonLetter4"
-            android:background="#fffcda1a"
-            android:layout_marginLeft="5dp"
+            android:background="#A4FF8144"
+            android:layout_marginLeft="10dp"
             android:layout_toRightOf="@+id/buttonLetter3"
             android:layout_toEndOf="@+id/buttonLetter3"
             android:onClick="onClickActualLetter" />
@@ -149,8 +193,8 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:id="@+id/buttonLetter5"
-            android:layout_marginLeft="5dp"
-            android:background="#fffcda1a"
+            android:layout_marginLeft="10dp"
+            android:background="#A4FF8144"
             android:layout_alignParentTop="true"
             android:layout_toRightOf="@+id/buttonLetter4"
             android:layout_toEndOf="@+id/buttonLetter4"
@@ -161,31 +205,30 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:id="@+id/imageButton8"
-
-            android:layout_marginLeft="5dp"
+            android:layout_marginLeft="10dp"
             android:layout_toRightOf="@+id/buttonLetter5"
             android:layout_toEndOf="@+id/buttonLetter5"
             android:onClick="ShowHintsPopUp"
             android:textSize="@dimen/actual_letter_text_size"
             android:text="\?"
-            android:background="#fffc0628"/>
+            android:textColor="#ffffffff"
+            android:background="#ff1ed448"/>
 
         <Button
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:id="@+id/buttonLetter6"
-            android:background="#fffcda1a"
-
+            android:background="#A4FF8144"
             android:layout_toLeftOf="@+id/buttonLetter1"
             android:layout_toStartOf="@+id/buttonLetter1"
-            android:layout_marginTop="65dp"
+            android:layout_marginTop="70dp"
             android:onClick="onClickActualLetter"/>
 
         <Button
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:id="@+id/buttonLetter7"
-            android:background="#fffcda1a"
+            android:background="#A4FF8144"
             android:layout_alignTop="@+id/buttonLetter6"
             android:layout_toLeftOf="@+id/buttonLetter2"
             android:layout_toStartOf="@+id/buttonLetter2"
@@ -195,7 +238,7 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:id="@+id/buttonLetter8"
-            android:background="#fffcda1a"
+            android:background="#A4FF8144"
             android:layout_alignTop="@+id/buttonLetter7"
             android:layout_toLeftOf="@+id/buttonLetter3"
             android:layout_toStartOf="@+id/buttonLetter3"
@@ -205,7 +248,7 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:id="@+id/buttonLetter9"
-            android:background="#fffcda1a"
+            android:background="#A4FF8144"
             android:layout_alignTop="@+id/buttonLetter8"
             android:layout_toLeftOf="@+id/buttonLetter4"
             android:layout_toStartOf="@+id/buttonLetter4"
@@ -215,7 +258,7 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:id="@+id/buttonLetter10"
-            android:background="#fffcda1a"
+            android:background="#A4FF8144"
             android:layout_alignTop="@+id/buttonLetter9"
             android:layout_alignLeft="@+id/buttonLetter4"
             android:layout_alignStart="@+id/buttonLetter4"
@@ -225,7 +268,7 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:id="@+id/buttonLetter11"
-            android:background="#fffcda1a"
+            android:background="#A4FF8144"
             android:layout_alignTop="@+id/buttonLetter10"
             android:layout_toLeftOf="@+id/imageButton8"
             android:layout_toStartOf="@+id/imageButton8"
@@ -235,7 +278,7 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:id="@+id/buttonLetter12"
-            android:background="#fffcda1a"
+            android:background="#A4FF8144"
             android:layout_alignTop="@+id/buttonLetter11"
             android:layout_alignLeft="@+id/imageButton8"
             android:layout_alignStart="@+id/imageButton8"
