--- a/app/src/main/res/layout-large/win.xml
+++ b/app/src/main/res/layout-large/win.xml
@@ -18,7 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Отлично!"
-            android:textSize="40dp"
+            android:textSize="70dp"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp"
             android:id="@+id/textView3"
@@ -28,7 +28,7 @@
             android:layout_height="wrap_content"
             android:text="Вы отгадали"
             android:textColor="#ffffffff"
-            android:textSize="20sp"
+            android:textSize="40sp"
             android:layout_below="@+id/textView3"
             android:layout_centerHorizontal="true"
             android:id="@+id/textView4" />
@@ -38,47 +38,58 @@
             android:layout_height="wrap_content"
             android:text="А Ф Р И К А"
             android:textColor="#ffffffff"
-            android:textSize="30sp"
+            android:textSize="60sp"
 
             android:layout_marginTop="15dp"
             android:layout_below="@+id/textView4"
             android:layout_centerHorizontal="true"
             android:id="@+id/guessWordTextView" />
 
-        <TextView
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="А в Африке капец как жарко - что дохнут мухи и слоны"
-            android:textColor="#ffffffff"
-            android:textSize="20sp"
-            android:layout_marginLeft="40dp"
-            android:layout_marginBottom="30dp"
-            android:layout_marginTop="65dp"
-            android:layout_below="@+id/textView4"
-            android:layout_centerHorizontal="true"
-            android:id="@+id/textView6" />
+            android:layout_below="@+id/guessWordTextView"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="А в Африке капец как жарко - что дохнут мухи и слоны"
+                android:textColor="#ffffffff"
+                android:textSize="35sp"
+                android:id="@+id/textView6"
+                android:layout_centerHorizontal="true"
+                />
+
+            </RelativeLayout>
+
 
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/textView6"
+            android:layout_centerVertical="true"
             android:layout_centerHorizontal="true"
-            android:id="@+id/relativeLayout3">
+            android:id="@+id/relativeLayout2">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="25"
                 android:textColor="#FFFFFF"
-                android:textSize="40sp"
-                android:layout_centerVertical="true" />
+                android:textSize="70sp"
+                android:id="@+id/textView5"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="5dp"/>
 
             <ImageView
-                android:layout_width="61dp"
-                android:layout_height="40dp"
+                android:layout_width="106dp"
+                android:layout_height="70dp"
                 android:background="@drawable/coins"
                 android:id="@+id/imageView5"
-                android:layout_marginLeft="50dp"
+                android:layout_alignBottom="@+id/textView5"
+                android:layout_toRightOf="@+id/textView5"
+                android:layout_toEndOf="@+id/textView5"
                 android:layout_centerVertical="true"/>
 
             </RelativeLayout>
@@ -87,20 +98,19 @@
 
 
         <Button
-            android:layout_width="170dp"
-            android:layout_height="50dp"
+            android:layout_width="270dp"
+            android:layout_height="100dp"
             android:text="Продолжить"
             android:id="@+id/buttonClose"
-            android:textSize="20sp"
+            android:textSize="30sp"
             android:textColor="#ffffffff"
             android:background="#2b394a"
             android:layout_marginTop="20dp"
-            android:layout_below="@+id/relativeLayout3"
-            android:layout_alignLeft="@+id/guessWordTextView"
-            android:layout_alignStart="@+id/guessWordTextView" />
+            android:layout_below="@+id/relativeLayout2"
+            android:layout_centerHorizontal="true" />
 
 
-        </RelativeLayout>
+    </RelativeLayout>
 
 
 </RelativeLayout>
