--- a/app/src/main/res/layout-xlarge/about.xml
+++ b/app/src/main/res/layout-xlarge/about.xml
@@ -6,38 +6,31 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="35dp"
-        android:id="@+id/header_panel">
+        android:layout_height="80dp">
 
         <RelativeLayout
-            android:layout_width="90dp"
-            android:layout_height="30dp"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
             android:background="@drawable/coni"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
-            android:layout_marginRight="3dp">
+            android:layout_marginRight="10dp">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:text="+"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="100"
+                android:text="10000"
                 android:alpha="0.7"
                 android:id="@+id/textView2"
                 android:layout_centerVertical="true"
-                android:textSize="18sp"
+                android:textSize="38sp"
                 android:layout_marginRight="5dp"
                 android:textColor="#ffffffff"
                 android:layout_toLeftOf="@+id/imageView"/>
 
             <ImageView
-                android:layout_width="20dp"
-                android:layout_height="20dp"
+                android:layout_width="33dp"
+                android:layout_height="33dp"
                 android:background="@drawable/coin"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
@@ -47,18 +40,17 @@
         </RelativeLayout>
 
         <RelativeLayout
-            android:layout_width="60dp"
-            android:layout_height="30dp"
+            android:layout_width="90dp"
+            android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:background="@drawable/coni"
-            android:layout_marginLeft="3dp">
+            android:layout_marginLeft="10dp">
 
             <ImageButton
-                android:layout_width="30dp"
-                android:layout_height="12dp"
+                android:layout_width="65dp"
+                android:layout_height="60dp"
                 android:id="@+id/imageButton3"
                 android:layout_centerVertical="true"
-                android:layout_centerHorizontal="true"
                 android:layout_marginLeft="10dp"
                 android:alpha="0.7"
                 android:background="@drawable/arr"/>
@@ -68,8 +60,8 @@
 
 
         <RelativeLayout
-            android:layout_width="65dp"
-            android:layout_height="30dp"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true"
             android:background="@drawable/coni"
@@ -78,11 +70,10 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="0"
+                android:text="200"
                 android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true"
                 android:textColor="#ffffffff"
-                android:textSize="22sp"
+                android:textSize="55sp"
                 android:id="@+id/textViewCurLevel"
                 android:alpha="0.7"/>
 
@@ -109,6 +100,7 @@
             android:layout_centerVertical="true"
             android:layout_toLeftOf="@+id/cifra"
             android:onClick="PrevLevelClick"/>
+
     </RelativeLayout>
 
     <TextView
@@ -117,25 +109,26 @@
         android:text="Ифна о нас"
         android:id="@+id/textView"
         android:textColor="#ffffff"
-        android:layout_marginTop="0dp"
+        android:layout_marginTop="5dp"
         android:layout_gravity="center_horizontal"
-        android:textSize="36dp" />
+        android:textSize="70dp" />
 
     <TextView
-        android:layout_margin="5dp"
+        android:layout_margin="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
+        android:textSize="42sp"
         android:textColor="#ffaeabad"
         android:text="Страница о себе... Но что же вам сказать о нас? Врятли вы нажмете на кнопку о нас, а тем более прочитаете эту бесполезную информацию, но все же мы решили написать всякую лабуду о себе, типо какие мы классные девелоперы и обезательно оставим свое мыло для того что бы вы якобы писали туда свои жалобы и предложения, но вы настолько ленивые юзеры что даже не поплагодарите разрабов за бесплатную игру своим положительным коментом в гуглплее. Всем спасибо за внимание!"/>
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="350dp"
+        android:layout_height="100dp"
         android:background="#ff2b394a"
         android:paddingLeft="3dp"
         android:paddingRight="3dp"
         android:text="Закрыть этот экран навсегда"
+        android:textSize="28sp"
         android:textColor="#ffffff"
         android:id="@+id/btnClose"
         android:layout_gravity="center_horizontal" />
