--- a/app/src/main/res/layout-xlarge/game.xml
+++ b/app/src/main/res/layout-xlarge/game.xml
@@ -7,35 +7,80 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="30dp">
+        android:layout_height="80dp">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="100 gold"
-            android:id="@+id/textView2"
-            android:layout_alignParentBottom="true"
+        <RelativeLayout
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:background="@drawable/coni"
+            android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:textSize="25dp"
-            android:textColor="#151554"/>
+            android:layout_marginRight="10dp">
 
-        <ImageButton
-            android:layout_width="50dp"
-            android:layout_height="25dp"
-            android:id="@+id/imageButton3"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="20dp"
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="10000"
+                android:alpha="0.7"
+                android:id="@+id/textViewGold"
+                android:layout_centerVertical="true"
+                android:textSize="38sp"
+                android:layout_marginRight="5dp"
+                android:textColor="#ffffffff"
+                android:layout_toLeftOf="@+id/imageView"/>
 
-            android:background="#ffff0a11"/>
+            <ImageView
+                android:layout_width="33dp"
+                android:layout_height="33dp"
+                android:background="@drawable/coin"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:id="@+id/imageView"
+                android:layout_marginRight="5dp"/>
 
-        <TextView
-            android:layout_width="wrap_content"
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="90dp"
             android:layout_height="wrap_content"
-            android:text="0"
-            android:id="@+id/textViewCurLevel"
             android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true" />
+            android:background="@drawable/coni"
+            android:layout_marginLeft="10dp">
+
+            <ImageButton
+                android:layout_width="65dp"
+                android:layout_height="60dp"
+                android:id="@+id/imageButton3"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="10dp"
+                android:alpha="0.7"
+                android:background="@drawable/arr"/>
+
+        </RelativeLayout>
+
+
+
+        <RelativeLayout
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/coni"
+            android:id="@+id/cifra">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="0"
+                android:layout_centerHorizontal="true"
+                android:textColor="#ffffffff"
+                android:textSize="55sp"
+                android:id="@+id/textViewCurLevel"
+                android:alpha="0.7"/>
+
+        </RelativeLayout>
+
+
 
         <Button
             style="?android:attr/buttonStyleSmall"
@@ -44,7 +89,7 @@
             android:text="+"
             android:id="@+id/nextLevel"
             android:layout_alignParentTop="true"
-            android:layout_toRightOf="@+id/textViewCurLevel"
+            android:layout_toRightOf="@+id/cifra"
             android:onClick="NextLevelClick"/>
 
         <Button
@@ -54,9 +99,9 @@
             android:text="-"
             android:id="@+id/prevLevel"
             android:layout_centerVertical="true"
-            android:layout_toLeftOf="@+id/textViewCurLevel"
-            android:layout_toStartOf="@+id/textViewCurLevel"
+            android:layout_toLeftOf="@+id/cifra"
             android:onClick="PrevLevelClick"/>
+
     </RelativeLayout>
 
     <RelativeLayout android:id="@+id/container" android:layout_width="match_parent" android:layout_height="710dp">
@@ -67,11 +112,11 @@
                          the ZoomActivity class.
             -->
             <RelativeLayout android:layout_width="700dp" android:layout_height="700dp" android:layout_centerHorizontal="true">
-                <ImageButton android:layout_width="340dp" android:layout_height="340dp" android:layout_x="0dp" android:layout_y="0dp" android:background="#ff000000" android:layout_marginBottom="5dp" android:id="@+id/imageView1" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:layout_alignParentTop="true" android:layout_alignParentLeft="true" android:padding="3dp"/>
-                <ImageButton android:layout_width="340dp" android:layout_height="340dp" android:layout_x="170dp" android:background="#ff000000" android:adjustViewBounds="false" android:baselineAlignBottom="false" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" android:layout_marginLeft="5dp" android:id="@+id/imageView2" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:padding="3dp"/>
-                <ImageButton android:layout_width="340dp" android:layout_height="340dp" android:layout_x="0dp" android:layout_y="170dp" android:background="#ff000000" android:clickable="false" android:layout_alignParentBottom="true" android:layout_alignParentLeft="true" android:layout_alignParentStart="true" android:id="@+id/imageView3" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:padding="3dp"/>
-                <ImageButton android:layout_width="340dp" android:layout_height="340dp" android:layout_x="170dp" android:layout_y="170dp" android:background="#ff000000" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:layout_marginLeft="5dp" android:layout_marginBottom="5dp" android:id="@+id/imageView4" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:padding="3dp"/>
-                <ImageView android:id="@+id/expanded_image" android:layout_width="700dp" android:layout_height="700dp" android:visibility="invisible" android:contentDescription="@string/description_zoom_touch_close" android:layout_centerInParent="true" android:layout_x="0dp" android:layout_y="0dp" android:padding="5dp" android:background="#ff10ff12"/>
+                <ImageButton android:layout_width="340dp" android:layout_height="340dp" android:layout_x="0dp" android:layout_y="0dp" android:background="#ff20195d" android:layout_marginBottom="5dp" android:id="@+id/imageView1" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:layout_alignParentTop="true" android:layout_alignParentLeft="true" android:padding="4dp"/>
+                <ImageButton android:layout_width="340dp" android:layout_height="340dp" android:layout_x="170dp" android:background="#ff20195d" android:adjustViewBounds="false" android:baselineAlignBottom="false" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" android:layout_marginLeft="5dp" android:id="@+id/imageView2" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:padding="4dp"/>
+                <ImageButton android:layout_width="340dp" android:layout_height="340dp" android:layout_x="0dp" android:layout_y="170dp" android:background="#ff20195d" android:clickable="false" android:layout_alignParentBottom="true" android:layout_alignParentLeft="true" android:layout_alignParentStart="true" android:id="@+id/imageView3" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:padding="4dp"/>
+                <ImageButton android:layout_width="340dp" android:layout_height="340dp" android:layout_x="170dp" android:layout_y="170dp" android:background="#ff20195d" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:layout_marginLeft="5dp" android:layout_marginBottom="5dp" android:id="@+id/imageView4" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:padding="4dp"/>
+                <ImageView android:id="@+id/expanded_image" android:layout_width="700dp" android:layout_height="700dp" android:visibility="invisible" android:contentDescription="@string/description_zoom_touch_close" android:layout_centerInParent="true" android:layout_x="0dp" android:layout_y="0dp" android:padding="5dp" android:background="#ff20195d"/>
             </RelativeLayout>
         </RelativeLayout>
     </RelativeLayout>
@@ -102,15 +147,15 @@
             android:layout_marginLeft="5dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:background="#fffcda1a"
+            android:background="#A4FF8144"
             android:onClick="onClick"/>
 
         <Button
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:id="@+id/buttonLetter1"
-            android:background="#fffcda1a"
-            android:layout_marginLeft="5dp"
+            android:background="#A4FF8144"
+            android:layout_marginLeft="10dp"
             android:layout_toRightOf="@+id/buttonLetter0"
             android:layout_toEndOf="@+id/buttonLetter0"
             android:onClick="onClick" />
@@ -119,8 +164,8 @@
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:id="@+id/buttonLetter2"
-            android:background="#fffcda1a"
-            android:layout_marginLeft="5dp"
+            android:background="#A4FF8144"
+            android:layout_marginLeft="10dp"
             android:layout_toRightOf="@+id/buttonLetter1"
             android:layout_toEndOf="@+id/buttonLetter1"
             android:onClick="onClick" />
@@ -129,8 +174,8 @@
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:id="@+id/buttonLetter3"
-            android:background="#fffcda1a"
-            android:layout_marginLeft="5dp"
+            android:background="#A4FF8144"
+            android:layout_marginLeft="10dp"
             android:layout_toRightOf="@+id/buttonLetter2"
             android:layout_toEndOf="@+id/buttonLetter2"
             android:onClick="onClick" />
@@ -139,8 +184,8 @@
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:id="@+id/buttonLetter4"
-            android:background="#fffcda1a"
-            android:layout_marginLeft="5dp"
+            android:background="#A4FF8144"
+            android:layout_marginLeft="10dp"
             android:layout_toRightOf="@+id/buttonLetter3"
             android:layout_toEndOf="@+id/buttonLetter3"
             android:onClick="onClick" />
@@ -149,8 +194,8 @@
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:id="@+id/buttonLetter5"
-            android:layout_marginLeft="5dp"
-            android:background="#fffcda1a"
+            android:layout_marginLeft="10dp"
+            android:background="#A4FF8144"
             android:layout_alignParentTop="true"
             android:layout_toRightOf="@+id/buttonLetter4"
             android:layout_toEndOf="@+id/buttonLetter4"
@@ -161,8 +206,10 @@
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:id="@+id/imageButton8"
-            android:background="#fffc0628"
-            android:layout_marginLeft="5dp"
+            android:text="\?"
+            android:textColor="#ffffffff"
+            android:background="#ff1ed448"
+            android:layout_marginLeft="10dp"
             android:layout_toRightOf="@+id/buttonLetter5"
             android:layout_toEndOf="@+id/buttonLetter5"
             android:textSize="@dimen/actual_letter_text_size"
@@ -172,18 +219,17 @@
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:id="@+id/buttonLetter6"
-            android:background="#fffcda1a"
-
+            android:background="#A4FF8144"
             android:layout_toLeftOf="@+id/buttonLetter1"
             android:layout_toStartOf="@+id/buttonLetter1"
-            android:layout_marginTop="95dp"
+            android:layout_marginTop="100dp"
             android:onClick="onClick"/>
 
         <Button
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:id="@+id/buttonLetter7"
-            android:background="#fffcda1a"
+            android:background="#A4FF8144"
             android:layout_alignTop="@+id/buttonLetter6"
             android:layout_toLeftOf="@+id/buttonLetter2"
             android:layout_toStartOf="@+id/buttonLetter2"
@@ -193,7 +239,7 @@
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:id="@+id/buttonLetter8"
-            android:background="#fffcda1a"
+            android:background="#A4FF8144"
             android:layout_alignTop="@+id/buttonLetter7"
             android:layout_toLeftOf="@+id/buttonLetter3"
             android:layout_toStartOf="@+id/buttonLetter3"
@@ -203,7 +249,7 @@
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:id="@+id/buttonLetter9"
-            android:background="#fffcda1a"
+            android:background="#A4FF8144"
             android:layout_alignTop="@+id/buttonLetter8"
             android:layout_toLeftOf="@+id/buttonLetter4"
             android:layout_toStartOf="@+id/buttonLetter4"
@@ -213,7 +259,7 @@
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:id="@+id/buttonLetter10"
-            android:background="#fffcda1a"
+            android:background="#A4FF8144"
             android:layout_alignTop="@+id/buttonLetter9"
             android:layout_alignLeft="@+id/buttonLetter4"
             android:layout_alignStart="@+id/buttonLetter4"
@@ -223,7 +269,7 @@
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:id="@+id/buttonLetter11"
-            android:background="#fffcda1a"
+            android:background="#A4FF8144"
             android:layout_alignTop="@+id/buttonLetter10"
             android:layout_toLeftOf="@+id/imageButton8"
             android:layout_toStartOf="@+id/imageButton8"
@@ -233,7 +279,7 @@
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:id="@+id/buttonLetter12"
-            android:background="#fffcda1a"
+            android:background="#A4FF8144"
             android:layout_alignTop="@+id/buttonLetter11"
             android:layout_alignLeft="@+id/imageButton8"
             android:layout_alignStart="@+id/imageButton8"
