--- a/app/src/main/res/layout/game.xml
+++ b/app/src/main/res/layout/game.xml
@@ -11,18 +11,25 @@
         android:id="@+id/header_panel">
 
         <RelativeLayout
-            android:layout_width="100dp"
-            android:layout_height="25dp"
+            android:layout_width="90dp"
+            android:layout_height="30dp"
             android:background="@drawable/coni"
             android:layout_centerVertical="true"
-            android:layout_alignParentRight="true">
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="3dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:text="+"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="100"
                 android:alpha="0.7"
-                android:id="@+id/textView2"
+                android:id="@+id/textViewGold"
                 android:layout_centerVertical="true"
                 android:textSize="18sp"
                 android:layout_marginRight="5dp"
@@ -40,27 +47,49 @@
 
             </RelativeLayout>
 
+<RelativeLayout
+    android:layout_width="60dp"
+    android:layout_height="30dp"
+    android:layout_centerVertical="true"
+    android:background="@drawable/coni"
+    android:layout_marginLeft="3dp">
+
+    <ImageButton
+        android:layout_width="30dp"
+        android:layout_height="12dp"
+        android:id="@+id/imageButton3"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="10dp"
+        android:alpha="0.7"
+        android:background="@drawable/arr"/>
+
+    </RelativeLayout>
 
 
-        <ImageButton
-            android:layout_width="28dp"
-            android:layout_height="22dp"
-            android:id="@+id/imageButton3"
+
+        <RelativeLayout
+            android:layout_width="65dp"
+            android:layout_height="30dp"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
-            android:alpha="0.7"
-            android:background="@drawable/arr"/>
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/coni"
+            android:id="@+id/cifra">
 
-        <TextView
+            <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="0"
-            android:textColor="#ffffffff"
-            android:textSize="25sp"
-            android:id="@+id/textViewCurLevel"
-            android:alpha="0.7"
+            android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true" />
+            android:textColor="#ffffffff"
+            android:textSize="22sp"
+            android:id="@+id/textViewCurLevel"
+            android:alpha="0.7"/>
+
+        </RelativeLayout>
+
+
 
         <Button
             style="?android:attr/buttonStyleSmall"
@@ -69,7 +98,7 @@
             android:text="+"
             android:id="@+id/nextLevel"
             android:layout_alignParentTop="true"
-            android:layout_toRightOf="@+id/textViewCurLevel"
+            android:layout_toRightOf="@+id/cifra"
             android:onClick="NextLevelClick"/>
 
         <Button
@@ -79,8 +108,7 @@
             android:text="-"
             android:id="@+id/prevLevel"
             android:layout_centerVertical="true"
-            android:layout_toLeftOf="@+id/textViewCurLevel"
-            android:layout_toStartOf="@+id/textViewCurLevel"
+            android:layout_toLeftOf="@+id/cifra"
             android:onClick="PrevLevelClick"/>
     </RelativeLayout>
 
@@ -92,15 +120,15 @@
                          the ZoomActivity class.
             -->
             <AbsoluteLayout android:layout_width="330dp" android:layout_height="330dp" android:layout_centerHorizontal="true">
-                <ImageButton android:layout_width="160dp" android:layout_height="160dp" android:layout_x="0dp" android:layout_y="0dp" android:background="#ff000000" android:layout_marginBottom="5dp" android:id="@+id/imageView1" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:layout_alignParentTop="true" android:layout_alignParentLeft="true" android:padding="3dp"/>
-                <ImageButton android:layout_width="160dp" android:layout_height="160dp" android:layout_x="170dp" android:background="#ff000000" android:adjustViewBounds="false" android:baselineAlignBottom="false" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" android:layout_marginLeft="5dp" android:id="@+id/imageView2" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:padding="3dp"/>
-                <ImageButton android:layout_width="160dp" android:layout_height="160dp" android:layout_x="0dp" android:layout_y="170dp" android:background="#ff000000" android:clickable="false" android:layout_alignParentBottom="true" android:layout_alignParentLeft="true" android:layout_alignParentStart="true" android:id="@+id/imageView3" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:padding="3dp"/>
+                <ImageButton android:layout_width="160dp" android:layout_height="160dp" android:layout_x="0dp" android:layout_y="0dp" android:background="#ff20195d" android:layout_marginBottom="5dp" android:id="@+id/imageView1" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:layout_alignParentTop="true" android:layout_alignParentLeft="true" android:padding="2dp"/>
+                <ImageButton android:layout_width="160dp" android:layout_height="160dp" android:layout_x="170dp" android:background="#ff20195d" android:adjustViewBounds="false" android:baselineAlignBottom="false" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" android:layout_marginLeft="5dp" android:id="@+id/imageView2" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:padding="2dp"/>
+                <ImageButton android:layout_width="160dp" android:layout_height="160dp" android:layout_x="0dp" android:layout_y="170dp" android:background="#ff20195d" android:clickable="false" android:layout_alignParentBottom="true" android:layout_alignParentLeft="true" android:layout_alignParentStart="true" android:id="@+id/imageView3" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:padding="2dp"/>
                 <ImageButton
                     android:layout_width="160dp"
                     android:layout_height="160dp"
                     android:layout_x="170dp"
                     android:layout_y="170dp"
-                    android:background="#ff000000"
+                    android:background="#ff20195d"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentRight="true"
                     android:layout_marginLeft="5dp"
@@ -108,7 +136,7 @@
                     android:id="@+id/imageView4"
                     android:layout_marginRight="1dp"
                     android:scaleType="centerCrop"
-                    android:padding="3dp"/>
+                    android:padding="2dp"/>
 
                 <ImageView android:id="@+id/expanded_image"
                     android:layout_width="match_parent" android:layout_height="match_parent"
@@ -117,7 +145,7 @@
                     android:layout_x="0dp"
                     android:layout_y="0dp"
                     android:background="#ff000000"
-                    android:padding="5dp"/>
+                    android:padding="3dp"/>
             </AbsoluteLayout>
         </LinearLayout>
     </RelativeLayout>
