--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -7,8 +7,94 @@
     android:background="@drawable/fullfon"
     android:id="@+id/rootLayoutMain">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="35dp"
+        android:id="@+id/header_panel">
+
+        <RelativeLayout
+            android:layout_width="90dp"
+            android:layout_height="30dp"
+            android:background="@drawable/coni"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="3dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:text="+"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="100"
+                android:alpha="0.7"
+                android:id="@+id/textView2"
+                android:layout_centerVertical="true"
+                android:textSize="18sp"
+                android:layout_marginRight="5dp"
+                android:textColor="#ffffffff"
+                android:layout_toLeftOf="@+id/imageView"/>
+
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:background="@drawable/coin"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:id="@+id/imageView"
+                android:layout_marginRight="5dp"/>
+
+        </RelativeLayout>
 
 
+
+
+        <RelativeLayout
+            android:layout_width="65dp"
+            android:layout_height="30dp"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/coni"
+            android:id="@+id/cifra">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="0"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:textColor="#ffffffff"
+                android:textSize="22sp"
+                android:id="@+id/textViewCurLevel"
+                android:alpha="0.7"/>
+
+        </RelativeLayout>
+
+
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="+"
+            android:id="@+id/nextLevel"
+            android:layout_alignParentTop="true"
+            android:layout_toRightOf="@+id/cifra"
+            android:onClick="NextLevelClick"/>
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="-"
+            android:id="@+id/prevLevel"
+            android:layout_centerVertical="true"
+            android:layout_toLeftOf="@+id/cifra"
+            android:onClick="PrevLevelClick"/>
+    </RelativeLayout>
 
 
     <ImageView
