--- a/app/src/main/res/layout/about.xml
+++ b/app/src/main/res/layout/about.xml
@@ -28,7 +28,7 @@
                 android:layout_height="wrap_content"
                 android:text="100"
                 android:alpha="0.7"
-                android:id="@+id/textView2"
+                android:id="@+id/textViewGold"
                 android:layout_centerVertical="true"
                 android:textSize="18sp"
                 android:layout_marginRight="5dp"
@@ -51,17 +51,19 @@
             android:layout_height="30dp"
             android:layout_centerVertical="true"
             android:background="@drawable/coni"
-            android:layout_marginLeft="3dp">
+            android:layout_marginLeft="3dp"
+            android:id="@+id/goBackFromPopup">
 
             <ImageButton
                 android:layout_width="30dp"
                 android:layout_height="12dp"
-                android:id="@+id/imageButton3"
                 android:layout_centerVertical="true"
                 android:layout_centerHorizontal="true"
                 android:layout_marginLeft="10dp"
                 android:alpha="0.7"
-                android:background="@drawable/arr"/>
+                android:background="@drawable/arr"
+                android:id="@+id/btnGoBackFromPopup"
+                />
 
         </RelativeLayout>
 
