--- a/app/src/main/res/layout/game.xml
+++ b/app/src/main/res/layout/game.xml
@@ -16,7 +16,9 @@
             android:background="@drawable/coni"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
-            android:layout_marginRight="3dp">
+            android:layout_marginRight="3dp"
+            android:id="@+id/relativeLayoutGold"
+            android:onClick="ShowGameshopPopUp">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -52,7 +54,9 @@
     android:layout_height="30dp"
     android:layout_centerVertical="true"
     android:background="@drawable/coni"
-    android:layout_marginLeft="3dp">
+    android:layout_marginLeft="3dp"
+    android:id="@+id/goBack"
+    android:onClick="goBack">
 
     <ImageButton
         android:layout_width="30dp"
@@ -62,7 +66,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="10dp"
         android:alpha="0.7"
-        android:background="@drawable/arr"/>
+        android:background="@drawable/arr"
+        android:onClick="goBack"/>
 
     </RelativeLayout>
 
