--- a/app/src/main/res/layout/win.xml
+++ b/app/src/main/res/layout/win.xml
@@ -56,12 +56,12 @@
             android:layout_marginTop="65dp"
             android:layout_below="@+id/textView4"
             android:layout_centerHorizontal="true"
-            android:id="@+id/textView6" />
+            android:id="@+id/textViewQuotation" />
 
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/textView6"
+            android:layout_below="@+id/textViewQuotation"
             android:layout_centerHorizontal="true"
             android:id="@+id/relativeLayout3">
 
