--- a/app/src/main/res/values-large/dimens.xml
+++ b/app/src/main/res/values-large/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="guess_letter_height">45dp</dimen>
     <dimen name="guess_letter_width">45dp</dimen>
     <dimen name="actual_letter_text_size">25dp</dimen>
+    <dimen name="eraser_margin_left">10dp</dimen>
 </resources>
