--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="guess_letter_height">30dp</dimen>
     <dimen name="guess_letter_width">30dp</dimen>
     <dimen name="actual_letter_text_size">15dp</dimen>
+    <dimen name="eraser_margin_left">5dp</dimen>
 </resources>
